# aura-mcp-core

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AURA_IA_MCP_PRD.md  DASHBOARD_FAULT_LOG.md  DASHBOARD_STATUS_SUMMARY.md  DASHBOARD_VERIFICATION_COMPLETE.md  PIPELINE_AUDIT_LOG.md  README.md  SYSTEM_HEALTH_ANALYSIS.md  app.js  docker-compose.cpu.yml  docker-compose.gpu.yml  docker-compose.observability.yml  docker-compose.server.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements-backend.txt  requirements-base.txt  requirements-dev.txt  requirements-gateway.txt  requirements.txt  temp_app.b64  test_chat.sh  test_report.json
.github/: commit_convention.md  pull_request_template.md
.kiro/: CORRECTIONS_APPLIED_SUMMARY.md  DEPLOYMENT_GUIDE_CORRECTED.md  FINAL_DEPLOYMENT_SUMMARY.md  QUICK_REFERENCE.md
SBOM/: README.md  sbom.json
aura-audio-service/: README.md  docker-compose.yml  pytest.ini
aura_ia_mcp/: __init__.py  main.py
config/: blackbox.yml  codex_mcp_servers.toml  dashboard_config.yaml  ide_ultra_config.json  mcp_concierge_spec.yaml  override.yaml  prometheus.yml  reload_config.py
dashboard/: HTML_DASHBOARD_README.md  docs.html  index.html  mcp_monitor_dashboard.html  old_dashboard.html
data/: README.txt  conversations.db  learning_50_tests_results.json  learning_dashboard_creation.json  learning_index.json  mcp_learning_phase9_dev_tools.json  mcp_learning_task6_injection.json  session_log_dashboard.json  task11_deployment_learning.json
docker/: Dockerfile.backend  Dockerfile.base  Dockerfile.dashboard  Dockerfile.mcp
docs/: ARE_PLUS_CODING_GUIDELINES.md  ARE_PLUS_README.md  CAPABILITIES.md  CODEX_MCP_INTEGRATION.md  DASHBOARD_FIXES_V2.md  DATA_RETENTION.md  EVIDENCE_BUNDLE_V2.md  Full_Agent_Implementation_Guide.md  GIT_TOOL_INTEGRATION.md  HOME_SERVER_DEPLOYMENT.md  LOCAL_PC_TEST.md  MASTER_PROJECT_STATUS.md  MCP_TOOL_GUIDE.md  PHASE7_FRONTEND_PLAN.md  PROV_SECRET_ROTATION.md  PR_UPDATE_NOTES.md  RISK_POLICY.md  SAFE_MODE_GUIDE.md  SAFE_MODE_TRANSITION_PLAN.md  STRUCTURAL_MERGE_STATUS.md  WAVE4_GAP_RESOLUTION_SUMMARY.md  WAVE6_DEPLOYMENT.md  WAVE6_PHASE2_COMPLETE.md  WAVE6_PHASE3_COMPLETE.md  dashboard_design_guide.md  integration_evidence.json  (+7 more)
(+1084 files in other folders)
