[project]
name = "aura-ia-mcp"
version = "0.1.0"
description = "Unified Aura IA MCP integration stack (governed, observable, secure)."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Aura IA Team", email = "devnull@example.com" }
]
dependencies = [
  "mcp>=0.9.0",
  "httpx==0.27.2",
  "requests>=2.31.0",
  "fastapi==0.110.0",
  "pydantic>=2.12,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "anyio>=4.4,<5.0",
  "python-multipart>=0.0.9",
  "uvicorn>=0.29,<0.30",
  "transformers>=4.35.0",
  "sentence-transformers>=2.2.2",
  "torch>=2.1.0",
  "numpy>=1.24.0",
  "scikit-learn>=1.3.0",
  "ollama>=0.1.0",
  "prometheus-client==0.20.0",
  "qdrant-client>=1.7.0",
]

[project.optional-dependencies]
dev = [
  "ruff==0.14.9",
  "mypy==1.11.2",
    "pytest==9.0.1",
    "pytest-asyncio>=1.3.0",
  "pre-commit==3.7.1",
  "cyclonedx-python-lib==4.2.2",
  "pip-licenses==4.3.3",
  "pip-audit>=2.7.0",
  "bandit>=1.7.6",
  "pytest-cov>=5.0.0",
]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E","F","I","B","UP","PT","SIM","PL"]
ignore = [
    "E501",    # Line too long (handled by formatter)
    "B006",    # Mutable default argument
    "PLR0913", # Too many arguments
    "PLR0915", # Too many statements
    "PLR0912", # Too many branches
    "PLR2004", # Magic value comparison
    "PLR0124", # Name compared with itself (NaN check)
    "SIM102",  # Nested if statements
    "SIM105",  # contextlib.suppress
    "UP038",   # isinstance union syntax
    "B904",    # raise from
]
exclude = ["env","logs","temp_migration_matrix*","temp_migration_test*"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"

[tool.cyclonedx]
schema_version = "1.5"

[tool.bandit]
skips = ["B101"]

[tool.pip-licenses]
format = "plain"
summary = true

[build-system]
requires = ["setuptools>=68","wheel"]
build-backend = "setuptools.build_meta"
